[package]
name = "rectutils"
version = "0.2.0"
authors = ["Dmitry Stepanov <d1maxa@yandex.ru>"]
edition = "2021"
license = "MIT"
description = "Common algorithms for rectangles (quadtree, rect packing, etc.)"
keywords = ["quadtree", "rectpack"]
include = ["/src/**/*", "/Cargo.toml", "/LICENSE", "/README.md"]
documentation = "https://docs.rs/rectutils"
repository = "https://github.com/mrDIMAS/rectutils"
readme = "README.md"
resolver = "2"
rust-version = "1.72"

[dependencies]
nalgebra = "0.33"
num-traits = "0.2.14"
arrayvec = "0.7.4"